# hs_alkane

./: Makefile  README.md  __init__.py  alkane.f90  box.f90  constants.f90  io.f90  main.f90  mc.f90  mc_dummy.f90  meson.build  pyproject.toml  quaternion.F90  random.f90  setup.py  singlechain.input  solid_butane.input  test.py  timer.f90  vis_module.f90
examples/: chain.xmol  liquid_butane.input  singlechain.input  solid_butane.input
examples/Dimer_LSMC/: chain.xmol.0001  chain.xmol.0002  lsmc.ipynb
examples/butane_phaseI/: butane.input  chain.xmol
examples/butane_phaseIII/: butane.input  chain.xmol
examples/jupyter/: chain.xmol  liquid_butane.ipynb  sample_singlemol.ipynb  solid_butane.ipynb
include/: alkane.h  box.h  io.h  quaternion.h  random.h  timer.h  vis_module.h
src/: Makefile  alkane.f90  alkane.i  box.f90  box.mod  constants.f90  constants.mod  io.f90  main.f90  mc.f90  mc_dummy.f90  quaternion.F90  random.f90  timer.f90  vis_module.f90
